Fixed a bug with layer of css "z-index"
We donnot need "z-index" for this project.

--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,6 @@ header, footer {
   margin-top: 10px;
   margin-left: 20px;
   display: block;
-  z-index: 1;
 }
 #folder_content {
   width: 1200px;
@@ -105,7 +104,6 @@ header, footer {
   margin-left: 20px;
   float: left;
   display: block;
-  z-index: 1;
 }
 .folder_container {
   height: 400px;
@@ -116,39 +114,34 @@ header, footer {
   background-position: center;
   position: relative;
   float: left;
-  z-index: 1;
   margin: 5px;
   margin-top: 20px;
   padding-top: 50px;
 }
 .element_list {
   position: relative;
-  display: block;
-  z-index: 1;
+  display: inline-block;
+  height: 400px;
+  width: 590px;
 }
 .folder_insider {
-  overflow-y: scroll;
-  overflow-x: hidden;
   width: 574px;
   height: 344px;
   display: block;
   margin-top: 28px;
   margin-left: 16px;
-  z-index: 1;
 }
 .folder_icon {
   position: absolute;
   top: 0px;
   left: 0px;
   display: block;
-  z-index: 101;
 }
 .folder_desc {
   position: absolute;
   top: 25px;
   left: 90px;
   display: block;
-  z-index: 1;
 }
 .folder_desc p {
   margin-top: 4px;
@@ -160,12 +153,10 @@ header, footer {
   background-image: url(../images/layout/element_bg.png);
   background-repeat: no-repeat;
   background-position: center;
-  display: none;
-  float: left;
+  display: inline-block;
   padding-left: 4px;
   padding-bottom: 5px;
   position: relative;
-  z-index: 100;
 }
 .element_container img {
   margin-left: 4px;
@@ -255,28 +246,6 @@ header, footer {
   background-color: #ffffff;
   background-position: 80px 50px;
 }
-#lightbox{
-  display:none;
-  position:absolute;
-  top:0px;
-  left:0px;
-  min-width:100%;
-  min-height:100%;
-  z-index:1000;
-  background-image: url(../images/layout/lightbox_bg_px.png);
-}
-#lightbox_panel{
-  display:none;
-  position:fixed;
-  top:100px;
-  left:50%;
-  margin-left:-200px;
-  width:400px;
-  background:#FFFFFF;
-  padding:10px 15px 10px 15px;
-  border:2px solid #CCCCCC;
-  z-index:1001;
-}
 footer {
   width: 100%;
   height: 33px;
@@ -287,23 +256,18 @@ footer {
   font-size: 11px;
   float: left;
   margin-top: -2px;
-  z-index:1;
 }
 .element_container_placeholder {
-  margin-top: 5px;
-  margin-bottom: 8px;
-  margin-left: 5px;
-  margin-right: 5px;
+	width: 176px;
+  height: 119px;
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
   border-radius: 8px;
   border: 2px dotted #ccc;
-  padding: 0;
-  width: 170px;
-  height: 120px;
-  float: left;
-  z-index: 100;
-  display: block;
+  display: inline-block;
+  margin-left: 4px;
+  margin-top: 4px;
+  position: relative;
   background-color: black;
   opacity:0.2;
   filter:alpha(opacity=20);
